--- a/Projet.html
+++ b/Projet.html
@@ -20,30 +20,30 @@
             </nav>
 
             <div id="LesProjets">
-                <a  href="Proj/JeuDeComba.html" onmouseover="HoverIcon('BotD','BotDSouri')" onmouseout="PasHover('BotD','BotDSouri')">
-                    <img src="Alloo/Projet/Combat.png"  id="BotD" style="opacity: 1;">
-                    <img src="Alloo/Projet/Combat2.png" id="BotDSouri" style="opacity: 0;">
+                <a  href="Proj/Morpion.html" onmouseover="HoverIcon('BotD','BotDSouri')" onmouseout="PasHover('BotD','BotDSouri')">
+                    <img src="Alloo/Projet/Morpion.png"  id="BotD" style="opacity: 1;">
+                    <img src="Alloo/Projet/Morpion2.png" id="BotDSouri" style="opacity: 0;">
                 </a>
-                <a  href="Proj/Jarre.html" onmouseover="HoverIcon('JJarre','JJarreSouri')" onmouseout="PasHover('JJarre','JJarreSouri')">
-                    <img src="Alloo/Projet/Jarre.png"  id="JJarre" style="opacity: 1;">
-                    <img src="Alloo/Projet/Jarre2.png" id="JJarreSouri" style="opacity: 0;">
+                <a  href="Proj/Fate.html" onmouseover="HoverIcon('JJarre','JJarreSouri')" onmouseout="PasHover('JJarre','JJarreSouri')">
+                    <img src="Alloo/Projet/Fate.png"  id="JJarre" style="opacity: 1;">
+                    <img src="Alloo/Projet/Fate2.png" id="JJarreSouri" style="opacity: 0;">
                 </a>
-                <a  href="Proj/Lab.html" onmouseover="HoverIcon('Lab','LabSouri')" onmouseout="PasHover('Lab','LabSouri')">
-                    <img src="Alloo/Projet/Generateur.png"  id="Lab" style="opacity: 1;">
-                    <img src="Alloo/Projet/Generateur2.png" id="LabSouri" style="opacity: 0;">
+                <a  href="Proj/Jarre.html" onmouseover="HoverIcon('Lab','LabSouri')" onmouseout="PasHover('Lab','LabSouri')">
+                    <img src="Alloo/Projet/Jarre.png"  id="Lab" style="opacity: 1;">
+                    <img src="Alloo/Projet/Jarre2.png" id="LabSouri" style="opacity: 0;">
                 </a>
-                <a  href="Proj/Fate.html" onmouseover="HoverIcon('FateJ','FateJSouri')" onmouseout="PasHover('FateJ','FateJSouri')">
-                    <img src="Alloo/Projet/Fate.png"  id="FateJ" style="opacity: 1;">
-                    <img src="Alloo/Projet/Fate2.png" id="FateJSouri" style="opacity: 0;">
+                <a  href="Proj/HeadinCloud.html" onmouseover="HoverIcon('FateJ','FateJSouri')" onmouseout="PasHover('FateJ','FateJSouri')">
+                    <img src="Alloo/Projet/Head.png"  id="FateJ" style="opacity: 1;">
+                    <img src="Alloo/Projet/Head2.png" id="FateJSouri" style="opacity: 0;">
                 </a>
-                <a  href="Proj/Morpion.html" onmouseover="HoverIcon('Morp','MorpSouri')" onmouseout="PasHover('Morp','MorpSouri')">
-                    <img src="Alloo/Projet/Morpion.png"  id="Morp" style="opacity: 1;">
-                    <img src="Alloo/Projet/Morpion2.png" id="MorpSouri" style="opacity: 0;">
+                <a  href="Proj/Blackjack.html" onmouseover="HoverIcon('Morp','MorpSouri')" onmouseout="PasHover('Morp','MorpSouri')">
+                    <img src="Alloo/Projet/BlackJack.png"  id="Morp" style="opacity: 1;">
+                    <img src="Alloo/Projet/BlackJack2.png" id="MorpSouri" style="opacity: 0;">
                 </a>
 
-                <a  href="Proj/HeadinCloud.html" onmouseover="HoverIcon('Cloud','CloudSouri')" onmouseout="PasHover('Cloud','CloudSouri')">
-                    <img src="Alloo/Projet/Head.png"  id="Cloud" style="opacity: 1;">
-                    <img src="Alloo/Projet/Head2.png" id="CloudSouri" style="opacity: 0;">
+                <a  href="Proj/JeuDeComba.html" onmouseover="HoverIcon('Cloud','CloudSouri')" onmouseout="PasHover('Cloud','CloudSouri')">
+                    <img src="Alloo/Projet/Combat.png"  id="Cloud" style="opacity: 1;">
+                    <img src="Alloo/Projet/Combat2.png" id="CloudSouri" style="opacity: 0;">
                 </a>
                 
                 <a href="Proj/PixelArt.html" onmouseover="HoverIcon('Pix','PixSouri')" onmouseout="PasHover('Pix','PixSouri')">
