--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio Kyla/ Acceuil</title>
         <link rel="icon" href="Alloo/Rose de Kyla .png">
         <link rel="stylesheet" href="Accueil.css">
@@ -23,8 +23,8 @@
         <div id="margin"></div>
         <div id="footer">
             <div id="Musique">
-                <p>Musique de font : </p>
-                <font color="#a73354" style="font-size: 95%; margin-left:0%;">Bonebottom-<a id="credSkil" href="https://www.hollowknightsilksong.com/" target="_blank"><font style="font-size: 100%;" >Skilsong</font></a> OST : </font>
+                <p>Musique de fond : </p>
+                <font color="#a73354" id="textSkil">Bonebottom-<a id="credSkil" href="https://www.hollowknightsilksong.com/" target="_blank"><font style="font-size: 100%;" >Skilsong</font></a> OST : </font>
                 <audio controls id="Skilsong" > 
                     <source src="Musique/Bonebottom (Silksong OST Sample).mp3" type="audio/mp3">
                 </audio>
@@ -62,7 +62,7 @@
                 </h1>
 
                 <h1 style="margin-top: -2%;">
-                    Image de font, pensé et réalisé par <a id="AboutKyla" href="/Moi.html" target="_blank">Kyla Crea</a> pour le site
+                    Image de fond, pensée et réalisée par <a id="AboutKyla" href="/Moi.html" target="_blank">Kyla Crea</a> pour le site
                 </h1>
 
                 <h1 style="margin-top: -2%;">Copyright © 2022,  <a id="AboutKyla" href="/Moi.html" target="_blank">Kyla Crea</a>, tout droit réservé</h1>
