--- a/Moi.html
+++ b/Moi.html
@@ -43,7 +43,7 @@
         <div id="margin"></div>
         <div id="footer">
             <div id="Musique">
-                <p>Musique de font : </p>
+                <p>Musique de fond : </p>
                 <font color="#a73354" style="font-size: 95%; margin-left:0%;">Bonebottom-<a id="credSkil" href="https://www.hollowknightsilksong.com/" target="_blank"><font style="font-size: 100%;" >Skilsong</font></a> OST : </font>
                 <audio controls id="Skilsong"> 
                     <source src="Musique/Bonebottom (Silksong OST Sample).mp3" type="audio/mp3">
@@ -82,7 +82,7 @@
                 </h1>
 
                 <h1 style="margin-top: -2%;">
-                    Image de font, pensé et réalisé par <a id="AboutKyla" href="/Moi.html" target="_blank">Kyla Crea</a> pour le site
+                    Image de fond, pensée et réalisée par <a id="AboutKyla" href="/Moi.html" target="_blank">Kyla Crea</a> pour le site
                 </h1>
 
                 <h1 style="margin-top: -2%;">Copyright © 2022,  <a id="AboutKyla" href="/Moi.html" target="_blank">Kyla Crea</a>, tout droit réservé</h1>
